# VSTain

./: .gitignore  NAMING_CONVENTIONS.md  PROJECT_STRUCTURE.md  README.md  logging_config.json  main.py  pyproject.toml
resource/qss/dark/: annotation_widget.qss
resource/qss/light/: annotation_widget.qss
src/vstain/: __init__.py  app.py
src/vstain/common/: config.py  cons.py  settings.py  style_sheet.py
src/vstain/components/: __init__.py  image_viewer.py  universal_image_viewer.py
src/vstain/utils/: logger.py  operation_recorder.py
src/vstain/widgets/: annotation_widget.py  feature_capture_widget.py  home_widget.py  hwnd_list_widget.py  image_card_widget.py
src/vstain/windows/: main_window.py
tests/components/: test_image_viewer.py
tests/manual/: demo_image_viewer.py
